# git_practice

./: README.md
git_common/python_common/: hello_world.py
git_common/python_common/api_automation_testing/: NOTES.md  auth_post.py  auth_v_parameters.py  get_api_call.py  post_api_call.py  post_demo.py  put_api_call.py  pytest_api_demo.py  user_config.json
git_common/python_common/api_automation_testing/pytest_api/: conftest.py
git_common/python_common/api_automation_testing/pytest_api/tests/: test_users.py
git_common/python_common/api_automation_testing/pytest_api/utils/: api_client.py
git_personal/jacob_c/: README.md  hello_world.py
git_personal/kevin_b/: README.md
git_personal/kevin_b/python_common/api_testing/: README.md  pyproject.toml
git_personal/kevin_b/python_common/api_testing/libs/: api_client.py
